--- a/serverless.yml
+++ b/serverless.yml
@@ -28,4 +28,4 @@ plugins:
   - serverless-esbuild
 
 custom:
-  database_url: 'mysql://5erk1vct9u5cxjmry8ef:pscale_pw_iy7Au6BVKx4CpAsQECNU0McfllwLs2DfY94GbzOtSYI@aws.connect.psdb.cloud/proveedor?ssl={"rejectUnauthorized":true}'
+  database_url: 'mysql://yhzoim9sdwz3j9mjqh1l:pscale_pw_tDrtzGAjqSUQ3yywmAKdv1PWX8lwBWO42exspcEm6Ro@aws.connect.psdb.cloud/proveedor?ssl={"rejectUnauthorized":true}'
